<?xml version="1.0"?>
<package>
  <name>gilbreth_gazebo</name>
  <version>0.0.0</version>
  <description>The gilbreth_gazebo package</description>

  <maintainer email="yz6me@virginia.edu">Yizhe Zhang</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <author email="yz6me@virginia.edu">Yizhe Zhang</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gilbreth_description</run_depend>
  <run_depend>xacro</run_depend>


  <export>
  
  </export>
</package>
