<?xml version="1.0"?>
<package format="2">
  <name>gilbreth_grasp_planning</name>
  <version>0.0.0</version>
  <description>The grasp planning package module</description>

  <maintainer email="jrgnichodeve@gmail.com">Jorge Nicho</maintainer>
  <author email="alex_zyz@hotmail.com">Yizhe Zhang</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>moveit_commander</depend>
  <depend>moveit_msgs</depend>
  <depend>tf</depend>


  <export>

  </export>
</package>
