<?xml version="1.0"?>
<package format="2">
  <name>gilbreth_msgs</name>
  <version>0.0.0</version>
  <description>Messages, Services and Actions for the Gilbreth Repository</description>
  <maintainer email="jrgnichodeve@gmail.com">Jorge Nicho</maintainer>
  <author email="jrgnichodeve@gmail.com">Jorge Nicho</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>moveit_msgs</depend>


</package>
