<?xml version="1.0"?>
<package>
  <name>gilbreth_perception</name>
  <version>0.0.0</version>
  <description>The gilbreth_perception package</description>

  <maintainer email="jrgnichodeve@gmail.com">Jorge Nicho</maintainer>
  <maintainer email="lianjunli2016@gmail.com">lianjunli</maintainer>
  <author email="lianjunli2016@gmail.com">lianjunli</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>gilbreth_msgs </build_depend>
  <build_depend>gilbreth_gazebo</build_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>python-numpy</build_depend>
  <run_depend>python-numpy</run_depend>

</package>
